Modify task definition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,9 +50,6 @@ jobs:
                 {
                   name: "simple-fastapi-container",
                   image: $IMAGE,
-                  cpu: 0,
-                  memory: 3072,
-                  memoryReservation: 1024,  # Set memory reservation if needed
                   portMappings: [
                     {
                       name: "simple-fastapi-container-8000-tcp",
@@ -83,6 +80,16 @@ jobs:
                 }
               ],
               networkMode: "awsvpc",
+              placementConstraints: [],
+              compatibilities: [
+                  "EC2",
+                  "FARGATE"
+              ],
+              requiresCompatibilities: [
+                  "FARGATE"
+              ],
+              cpu: 0,
+              memory: 3072,
               taskRoleArn: "arn:aws:iam::767397773214:role/ecsTaskExecutionRole",
               executionRoleArn: "arn:aws:iam::767397773214:role/ecsTaskExecutionRole"
             }' <<< '{}')
