Update defining task definition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,6 @@ jobs:
                 {
                   name: "simple-fastapi-container",
                   image: $IMAGE,
-                  cpu: 0,
-                  memory: 3072,
                   portMappings: [
                     {
                       name: "simple-fastapi-container-8000-tcp",
@@ -86,6 +84,12 @@ jobs:
               requiresCompatibilities: [
                   "FARGATE"
               ],
+              cpu: "1024",
+              memory: "3072",
+              runtimePlatform: {
+                  cpuArchitecture: "X86_64",
+                  operatingSystemFamily: "LINUX"
+              },
               taskRoleArn: "arn:aws:iam::767397773214:role/ecsTaskExecutionRole",
               executionRoleArn: "arn:aws:iam::767397773214:role/ecsTaskExecutionRole"
             }' <<< '{}')
