--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
               containerDefinitions: [
                 {
                   name: "simple-fastapi-container",
-                  image: $IMAGE,
+                  image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG,
                   portMappings: [
                     {
                       name: "simple-fastapi-container-8000-tcp",
