--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,14 +42,19 @@ jobs:
 
       - name: Register new task definition
         id: register-task-def
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
+          IMAGE_TAG: ${{ steps.build-image.outputs.IMAGE_TAG }}
         run: |
+          echo "Registering Task Definition with Image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           TASK_DEFINITION_JSON=$(jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" \
             '{
               family: "my-simple-fastapi",
               containerDefinitions: [
                 {
                   name: "simple-fastapi-container",
-                  image: "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG",
+                  image: $IMAGE,
                   portMappings: [
                     {
                       name: "simple-fastapi-container-8000-tcp",
