--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,14 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image_tag::$IMAGE_TAG"
 
       - name: Register new task definition
         id: register-task-def
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-          IMAGE_TAG: ${{ steps.build-image.outputs.IMAGE_TAG }}
+          IMAGE_TAG: ${{ steps.build-image.outputs.image_tag }}
         run: |
           echo "Registering Task Definition with Image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           TASK_DEFINITION_JSON=$(jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" \
@@ -103,18 +104,18 @@ jobs:
             --cli-input-json file://updated-task-definition.json \
             --region ap-southeast-2
 
-      - name: Update ECS service
-        run: |
-          CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
-          SERVICE_NAME=${{ secrets.ECS_SERVICE }}
-          TASK_DEFINITION="my-simple-fastapi"
+      # - name: Update ECS service
+      #   run: |
+      #     CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
+      #     SERVICE_NAME=${{ secrets.ECS_SERVICE }}
+      #     TASK_DEFINITION="my-simple-fastapi"
 
-          # Get the latest task definition revision
-          NEW_TASK_DEF_ARN=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION | jq -r .taskDefinition.taskDefinitionArn)
+      #     # Get the latest task definition revision
+      #     NEW_TASK_DEF_ARN=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION | jq -r .taskDefinition.taskDefinitionArn)
 
-          # Update the ECS service
-          aws ecs update-service \
-            --cluster $CLUSTER_NAME \
-            --service $SERVICE_NAME \
-            --task-definition $NEW_TASK_DEF_ARN \
-            --region ap-southeast-2
+      #     # Update the ECS service
+      #     aws ecs update-service \
+      #       --cluster $CLUSTER_NAME \
+      #       --service $SERVICE_NAME \
+      #       --task-definition $NEW_TASK_DEF_ARN \
+      #       --region ap-southeast-2
