--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,18 +104,18 @@ jobs:
             --cli-input-json file://updated-task-definition.json \
             --region ap-southeast-2
 
-      # - name: Update ECS service
-      #   run: |
-      #     CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
-      #     SERVICE_NAME=${{ secrets.ECS_SERVICE }}
-      #     TASK_DEFINITION="my-simple-fastapi"
+      - name: Update ECS service
+        run: |
+          CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
+          SERVICE_NAME=${{ secrets.ECS_SERVICE }}
+          TASK_DEFINITION="my-simple-fastapi"
 
-      #     # Get the latest task definition revision
-      #     NEW_TASK_DEF_ARN=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION | jq -r .taskDefinition.taskDefinitionArn)
+          # Get the latest task definition revision
+          NEW_TASK_DEF_ARN=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION | jq -r .taskDefinition.taskDefinitionArn)
 
-      #     # Update the ECS service
-      #     aws ecs update-service \
-      #       --cluster $CLUSTER_NAME \
-      #       --service $SERVICE_NAME \
-      #       --task-definition $NEW_TASK_DEF_ARN \
-      #       --region ap-southeast-2
+          # Update the ECS service
+          aws ecs update-service \
+            --cluster $CLUSTER_NAME \
+            --service $SERVICE_NAME \
+            --task-definition $NEW_TASK_DEF_ARN \
+            --region ap-southeast-2
